@startuml
skinparam Handwritten true
skinparam monochrome true	
skinparam packageStyle rect	
skinparam shadowing false
class DiffRest.Infrastructure.Program{
    +void Main(string[] args)
    +IWebHostBuilder CreateWebHostBuilder(string[] args)
}
class DiffRest.Infrastructure.Startup{
    +IServiceProvider ConfigureServices(IServiceCollection services)
    +void Configure(IApplicationBuilder app, IHostingEnvironment env)
}
class DiffRest.Infrastructure.DiffController{
    -IMediator _mediator;
    +Task<IActionResult> PostLeft(string id, string json)
    +Task<IActionResult> PostRight(string id, string json)
    +Task<IActionResult> Post(string id)
}
class DiffRest.Infrastructure.Program{
    +void Main(string[] args)
    +IWebHostBuilder CreateWebHostBuilder(string[] args)
}
class DiffRest.Infrastructure.Startup{
    +IServiceProvider ConfigureServices(IServiceCollection services)
    +void Configure(IApplicationBuilder app, IHostingEnvironment env)
}
interface DiffRest.Infrastructure.DiffRepository{
    +void Add(IDiffer diff)
    +void Update(IDiffer diff)
    +IDiffer GetById(string id)
}
class DiffRest.Application.PushLeftJsonCommand{
    +string Id
    +string Json
}
class DiffRest.Application.PushRightJsonCommand{
    +string Id
    +string Json
}
class DiffRest.Application.DiffCommand{
    +string Id
}
class DiffRest.Application.PushLeftJsonCommandHandler{
    -IDiffRepository _diffRepository
    +Task Handler(PushLeftJsonCommand command)
}
class DiffRest.Application.PushRightJsonCommandHandler{
    -IDiffRepository _diffRepository
    +Task Handler(PushRightJsonCommand command)
}
class DiffRest.Application.DiffCommandHandler{
    -IDiffRepository _diffRepository
    +Task<IDifferResult> Handler(DiffCommand command)
}
interface DiffRest.Domain.IDiffRepository{
    +void Add(IDiffer diff)
    +void Update(IDiffer diff)
    +IDiffer GetById(string id)
}
class DiffRest.Domain.IDiffer{
    +string Id
    +string Left
    +string Right
    +DiffResult Diff()
}
class DiffRest.Domain.DiffJson{
    +string Id
    +string Left
    +string Right
    +IDifferResult Diff()
}
class DiffRest.Domain.DifferResult{
    +string Id
    +bool AreEqual
    +IEnumeravle<Segment> DiffResults
}
interface DiffRest.Domain.IDifferResult{
    +string Id
    +bool AreEqual
    +IEnumeravle<Segment> DiffResults
}
class DiffRest.Domain.Segment{
    +int Offset
    +int Length
}
interface Mediatr.IRequest<TResponse>{
}
interface Mediatr.IRequestHandler<TRequest : IRequest<TResponse>, TResponse>{
    +TResponse Handle(TRequest command)
}



DiffRest.Application.PushLeftJsonCommand <.down. DiffRest.Infrastructure.DiffController
DiffRest.Application.PushRightJsonCommand <.down. DiffRest.Infrastructure.DiffController
DiffRest.Application.DiffCommand <.down. DiffRest.Infrastructure.DiffController

DiffRest.Application.PushLeftJsonCommand .right.> Mediatr.IRequest
DiffRest.Application.PushRightJsonCommand .right.> Mediatr.IRequest
DiffRest.Application.DiffCommand .right.> Mediatr.IRequest


DiffRest.Application.PushLeftJsonCommandHandler .up.> DiffRest.Application.PushLeftJsonCommand
DiffRest.Application.PushRightJsonCommandHandler .up.> DiffRest.Application.PushRightJsonCommand
DiffRest.Application.DiffCommandHandler .up.> DiffRest.Application.DiffCommand

DiffRest.Application.PushLeftJsonCommandHandler .right.> Mediatr.IRequestHandler
DiffRest.Application.PushRightJsonCommandHandler .right.> Mediatr.IRequestHandler
DiffRest.Application.DiffCommandHandler .right.> Mediatr.IRequestHandler

Mediatr.IRequestHandler .up.>  Mediatr.IRequest

DiffRest.Infrastructure.DiffController .down.> DiffRest.Domain.IDifferResult 
DiffRest.Application.DiffCommandHandler .down.> DiffRest.Domain.IDifferResult 

DiffRest.Infrastructure.DiffRepository .down.> DiffRest.Domain.IDiffRepository
DiffRest.Domain.IDiffRepository .left.> DiffRest.Domain.IDiffer
DiffRest.Domain.DiffJson .left.> DiffRest.Domain.DifferResult
DiffRest.Domain.DiffJson .up.> DiffRest.Domain.IDifferResult
DiffRest.Domain.DiffJson .up.|> DiffRest.Domain.IDiffer
DiffRest.Domain.DifferResult .up.|> DiffRest.Domain.IDifferResult
DiffRest.Infrastructure.Program .up.> DiffRest.Infrastructure.Startup
DiffRest.Infrastructure.Program -[hidden]> DiffRest.Infrastructure.DiffController
DiffRest.Domain.IDifferResult ..> DiffRest.Domain.Segment
DiffRest.Domain.DifferResult ..> DiffRest.Domain.Segment

@enduml